RESOLVED FIXED91410
Inconsistent rounding in table layout causes background color to bleed through
https://bugs.webkit.org/show_bug.cgi?id=91410
Summary Inconsistent rounding in table layout causes background color to bleed through
Emil A Eklund
Reported 2012-07-16 11:54:43 PDT
At certain zoom levels a rounding error in the table layout code cases the table background color to bleed through between cells. This only affects platforms that have enabled sub-pixel layout. Downstream chromium bug: http://code.google.com/p/chromium/issues/detail?id=137191
Attachments
Patch (18.55 KB, patch)
2012-07-16 12:06 PDT, Emil A Eklund
no flags
Archive of layout-test-results from gce-cr-linux-05 (782.81 KB, application/zip)
2012-07-16 13:42 PDT, WebKit Review Bot
no flags
Patch (272.69 KB, patch)
2012-07-16 14:06 PDT, Emil A Eklund
no flags
Archive of layout-test-results from gce-cr-linux-02 (606.57 KB, application/zip)
2012-07-16 15:04 PDT, WebKit Review Bot
no flags
Emil A Eklund
Comment 1 2012-07-16 12:06:41 PDT
WebKit Review Bot
Comment 2 2012-07-16 13:42:45 PDT
Comment on attachment 152581 [details] Patch Attachment 152581 [details] did not pass chromium-ews (chromium-xvfb): Output: http://queues.webkit.org/results/13260120 New failing tests: css1/basic/inheritance.html svg/zoom/page/zoom-svg-through-object-with-absolute-size.xhtml svg/zoom/page/zoom-img-preserveAspectRatio-support-1.html svg/zoom/page/zoom-replaced-intrinsic-ratio-001.htm svg/zoom/page/zoom-svg-through-object-with-percentage-size.xhtml svg/zoom/page/zoom-svg-through-object-with-absolute-size-2.xhtml tables/mozilla/bugs/bug73321.html
WebKit Review Bot
Comment 3 2012-07-16 13:42:50 PDT
Created attachment 152604 [details] Archive of layout-test-results from gce-cr-linux-05 The attached test failures were seen while running run-webkit-tests on the chromium-ews. Bot: gce-cr-linux-05 Port: <class 'webkitpy.common.config.ports.ChromiumXVFBPort'> Platform: Linux-2.6.39-gcg-201203291735-x86_64-with-Ubuntu-10.04-lucid
Emil A Eklund
Comment 4 2012-07-16 14:06:19 PDT
Emil A Eklund
Comment 5 2012-07-16 14:41:24 PDT
The eseidel is back! Thanks Eric.
Eric Seidel (no email)
Comment 6 2012-07-16 14:44:37 PDT
Where did I go? :) I guess I've just not been hunting the r? queue much these last couple weeks. In any case, I'm here for your reviewing pleasure, just let me know.
WebKit Review Bot
Comment 7 2012-07-16 15:04:13 PDT
Comment on attachment 152608 [details] Patch Attachment 152608 [details] did not pass chromium-ews (chromium-xvfb): Output: http://queues.webkit.org/results/13268001 New failing tests: plugins/embed-attributes-style.html svg/zoom/page/zoom-replaced-intrinsic-ratio-001.htm
WebKit Review Bot
Comment 8 2012-07-16 15:04:19 PDT
Created attachment 152621 [details] Archive of layout-test-results from gce-cr-linux-02 The attached test failures were seen while running run-webkit-tests on the chromium-ews. Bot: gce-cr-linux-02 Port: <class 'webkitpy.common.config.ports.ChromiumXVFBPort'> Platform: Linux-2.6.39-gcg-201203291735-x86_64-with-Ubuntu-10.04-lucid
Emil A Eklund
Comment 9 2012-07-16 15:11:02 PDT
Jer Noble
Comment 10 2012-07-18 16:45:47 PDT
This commit broke the fast/sub-pixel/selection/selection-gaps-at-fractional-offsets.html test on every platform which had previously skipped it by removing the "/selection/" from each Skipped list entry containing the test.
Jer Noble
Comment 11 2012-07-18 16:50:52 PDT
Emil A Eklund
Comment 12 2012-07-18 16:53:17 PDT
My bad, thank you!
Note You need to log in before you can comment on or make changes to this bug.