Source/WebCore/rendering/RenderTable.cpp
@@ -575,9 +575,11 @@ void RenderTable::paintObject(PaintInfo& paintInfo, const LayoutPoint& paintOffs
     info.phase = paintPhase;
     info.updatePaintingRootForChildren(this);
 
+    IntPoint alignedOffset = roundedIntPoint(paintOffset);
+
     for (RenderObject* child = firstChild(); child; child = child->nextSibling()) {
         if (child->isBox() && !toRenderBox(child)->hasSelfPaintingLayer() && (child->isTableSection() || child->isTableCaption())) {
-            LayoutPoint childPoint = flipForWritingModeForChild(toRenderBox(child), paintOffset);
+            LayoutPoint childPoint = flipForWritingModeForChild(toRenderBox(child), alignedOffset);
             child->paint(info, childPoint);
         }
     }
